# opair_data_engineering

./: .gitignore  Appointment_MissingFiles.py  Improoved_Update_FinalSF.py  New_ImportAppointment.py  UpdateFinalSF.py  missing_file_dates.csv
UG_Survey/: .env.example  .gitignore  Check_Connection.py  README.md  TestConnection.ps1  pyproject.toml  requirements.txt  smtp_test.py
UG_Survey/config/: settings.yaml
UG_Survey/config/mappings/: ug_field_mapping.yaml
UG_Survey/config/table_fields/: tbl_stage_raw_survey.yaml
UG_Survey/scripts/: run_load_raw.ps1  run_stage_to_ugs.ps1  run_ugsurvey_daily.ps1
UG_Survey/src/: Check_Connection.py
UG_Survey/src/ug_survey/: config.py  db.py  etl_acadyear_labels.py  etl_conn_to_psu.py  etl_empl_job_lrned.py  etl_intern.py  etl_intern_lrned.py  etl_intl_exp.py  etl_response.py  etl_stud_attr.py  file_utils.py  load_raw.py  load_reference.py  logging_setup.py  qa.py  run_full_etl.py  stage_to_ugs.py  validate_schema.py
UG_Survey/src/ug_survey.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
UG_Survey/src/ug_survey/sql/ugs/: insert_conn_to_psu.sql  insert_intern_1.sql  insert_intern_2.sql  insert_intern_3.sql  insert_intl_exp_ayea.sql  insert_intl_exp_embedded.sql  insert_intl_exp_none.sql  insert_intl_exp_other.sql  insert_intl_exp_revised_group.sql  insert_intl_exp_semabroad.sql  insert_intl_exp_studorg.sql  insert_response.sql  insert_stud_attr.sql
